--- a/observerPattern/pom.xml
+++ b/observerPattern/pom.xml
@@ -4,16 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>pl.java.patterns</groupId>
-    <artifactId>strategy</artifactId>
+    <groupId>pl.patterns</groupId>
+    <artifactId>observer</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <dependencies>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>RELEASE</version>
-        </dependency>
-    </dependencies>
 
 
 </project>
